--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -49,6 +49,24 @@ int EvalRates(double *k, double *y, NaunetData *u_data) {
     return NAUNET_SUCCESS;
 }
 
+Observer::Observer(int mxsteps) {
+    mxsteps_ = mxsteps;
+    step_ = 0;
+    time_ = 0.0;
+};
+
+Observer::~Observer(){};
+
+void Observer::operator()( const vector_type &x , double t ) {
+    step_ += 1;
+    time_ = t;
+    if( step_ > mxsteps_ ) {
+        char err[70];
+        sprintf(err, "mxstep steps taken before reaching tout. t=%13.7e", time_);
+        throw std::runtime_error(err);
+    }
+};
+
 Fex::Fex(NaunetData *data) {
     u_data  = new NaunetData();
     *u_data = *data;
