Add option of enabling ctest

--- a/naunet/templates/cvode/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/CMakeLists.txt.j2
@@ -92,6 +92,7 @@ message(STATUS "NVIDIA_GPU_COUNT           = " ${NVIDIA_GPU_COUNT})
 set(MAKE_STATIC ON CACHE BOOL "")
 set(MAKE_SHARED ON CACHE BOOL "")
 set(MAKE_PYTHON OFF CACHE BOOL "")
+set(MAKE_TEST OFF CACHE BOOL "")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if(MAKE_PYTHON)
@@ -99,8 +100,10 @@ if(MAKE_PYTHON)
     find_package(PythonInterp REQUIRED)
 endif()
 
-enable_testing()
-
 add_subdirectory(src)
-add_subdirectory(test)
+
+if(MAKE_TEST)
+    enable_testing()
+    add_subdirectory(test)
+endif()
 
