--- a/naunet/templates/common/include/naunet_physics.h.j2
+++ b/naunet/templates/common/include/naunet_physics.h.j2
@@ -27,8 +27,12 @@ double GetH2shielding(double coldens, int method);
 double GetCOshielding(double tgas, double h2col, double coldens, int method);
 double GetN2shielding(double tgas, double h2col, double coldens, int method);
 double GetH2shieldingInt(double coldens);
+double GetH2shieldingFGK(double coldens);
 double GetCOshieldingInt(double tgas, double h2col, double coldens);
+double GetCOshieldingInt1(double h2col, double coldens);
 double GetN2shieldingInt(double tgas, double h2col, double coldens);
+double GetCharactWavelength(double h2col, double cocol);
+double GetGrainScattering(double av, double wavelength);
 /* {% endif %} */
 
 #endif
