Simplify the dense matrix expression

--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -130,6 +130,8 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     EvalCoolingRates(kc, y, u_data);
 #endif
 
+    SUNMatZero(jmatrix);
+
     // clang-format off
     {% for eq in ode.jac -%}
         {{ eq | stmwrap(80, 8) }}
