Add a CO shielding table

--- a/naunet/templates/common/include/naunet_constants.h.j2
+++ b/naunet/templates/common/include/naunet_constants.h.j2
@@ -118,7 +118,7 @@ extern const double COShieldingTableY[7];
 // CO shielding factor
 extern const double COShieldingTable[6][7];
 // Second derivative of CO shielding factor
-double COShieldingTableD2[6][7];
+// extern double COShieldingTableD2[6][7];
 {% endif %}
 
 {% if physics.n2shielding == "L13Table" %}
