Fix some problems in enzo patch

--- a/naunet/templates/patches/enzo/naunet_enzo.h.j2
+++ b/naunet/templates/patches/enzo/naunet_enzo.h.j2
@@ -7,7 +7,7 @@
 #define NAUNET_SPECIES 4
 // number of equations to be solved
 #define NAUNET_NSPECIES {{ nspec }}
-#define NAUNET_NEQNS {{ neqns }}
+#define NAUNET_NEQUATIONS {{ neqns }}
 
 {% for s in species -%}
 #define IDX_{{ s.alias }} {{ loop.index0 }}
