Add function to get H nuclei number

--- a/naunet/templates/common/include/naunet_physics.h.j2
+++ b/naunet/templates/common/include/naunet_physics.h.j2
@@ -3,6 +3,7 @@
 
 /* {% if info.device == "gpu" %} */
 __device__ __host__ double GetMantleDens(double *y);
+__device__ __host__ double GetHNuclei(double *y);
 __device__ __host__ double GetMu(double *y);
 __device__ __host__ double GetGamma(double *y);
 __device__ __host__ double GetNumDens(double *y);
@@ -18,6 +19,7 @@ __device__ double GetCOshieldingInt(double tgas, double h2col, double coldens);
 __device__ double GetN2shieldingInt(double tgas, double h2col, double coldens);
 /* {% else %} */
 double GetMantleDens(double *y);
+double GetHNuclei(double *y);
 double GetMu(double *y);
 double GetGamma(double *y);
 double GetNumDens(double *y);
