--- a/naunet/templates/common/include/naunet_utilities.h.j2
+++ b/naunet/templates/common/include/naunet_utilities.h.j2
@@ -1,6 +1,8 @@
 #ifndef __NAUNET_UTILITIES_H__
 #define __NAUNET_UTILITIES_H__
 
+namespace naunet_util {
+
 // From Numerical Recipes in C, 2nd ed
 double *vector(long nl, long nh);
 void free_vector(double *v, long nl, long nh);
@@ -11,5 +13,7 @@ void splint(double xa[], double ya[], double y2a[], int n, double x, double *y);
 void splie2(double x1a[], double x2a[], double *ya[], int m, int n, double **y2a);
 void splin2(double x1a[], double x2a[], double *ya[], double *y2a[], int m, int n,
         	double x1, double x2, double *y);
+
+} // namespace naunet_util
 
 #endif
